--- a/styles/styles.css
+++ b/styles/styles.css
@@ -240,7 +240,8 @@ html {
 }
 
 body {
-  background-color: #47b2da;
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#fde700), color-stop(#c5f150), color-stop(#93f484), color-stop(#6cf2b1), color-stop(#61ecd3), color-stop(#5fe5dd), color-stop(#66dde3), color-stop(#74d4e4), color-stop(#67cce2), color-stop(#5cc3df), color-stop(#51bbdd), to(#47b2da));
+  background-image: linear-gradient(to right bottom, #fde700, #c5f150, #93f484, #6cf2b1, #61ecd3, #5fe5dd, #66dde3, #74d4e4, #67cce2, #5cc3df, #51bbdd, #47b2da);
 }
 
 h1 {
@@ -249,9 +250,9 @@ h1 {
 }
 
 .wrapper {
+  max-width: 1200px;
   width: 90vw;
   margin: 0 auto;
-  max-width: 1200px;
 }
 
 .searchInput {
@@ -268,6 +269,7 @@ h1 {
   padding: 5%;
 }
 
-.modal {
+.spellingModal,
+.miscModal {
   display: none;
 }
