Input, Button and Container Styling. Next: Footer and Media Queries

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -1,10 +1,4 @@
 @import "setup";
-@import "pageStyle.scss"
+@import "mainPageStyle.scss";
+@import "resultsStyle.scss";
 
-
-
-// font-family: 'Poppins', sans-serif;
-
-// body {
-//     background: white;
-// }
