--- a/styles/styles.css
+++ b/styles/styles.css
@@ -308,3 +308,13 @@ form .inputAndButton button {
   background-color: white;
   border: 1px solid black;
 }
+
+.weatherDescription {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-left: 5%;
+}
