--- a/styles/sass/_mediaQueries.scss
+++ b/styles/sass/_mediaQueries.scss
@@ -1,6 +1,6 @@
 @media (max-width: 768px) {
     h1 {
-        font-size: 3.5rem;
+        font-size: 3rem;
     }
 
     .searchInput {
@@ -15,7 +15,7 @@
 
 @media (max-width: 547px) {
     h1 {
-        font-size: 3rem;
+        font-size: 2.5rem;
     }
 
     form {
@@ -55,8 +55,8 @@
         font-size: 1.5rem;
     } 
 
-    footer {
-        padding-top: 50px;
-    }
+    // footer {
+    //     padding-top: 50px;
+    // }
 }
 // End of 420px
