--- a/styles/sass/_mediaQueries.scss
+++ b/styles/sass/_mediaQueries.scss
@@ -55,8 +55,11 @@
         font-size: 1.5rem;
     } 
 
-    // footer {
-    //     padding-top: 50px;
-    // }
+    .inputAndButton {
+        button {
+            font-size: 0.8rem;
+        }
+    }
+
 }
 // End of 420px
