--- a/styles/sass/_mainPageStyle.scss
+++ b/styles/sass/_mainPageStyle.scss
@@ -53,6 +53,41 @@ form {
 }
 // End of Content Container Styling
 
+.loading {
+    height: 100vh;
+    width: 100vw;
+    display: none;
+}
+
+.loadingImage {
+    width: 3rem;
+    height: 3rem;
+    border: 5px solid #f3f3f3;
+    border-top: 6px solid #74d4e4;
+    border-radius: 100%;
+    margin: auto;
+    animation: spin 1s infinite linear;
+}
+
+.loading.display {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: #c1f6ff;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
 footer {
     text-align: center;
     padding-top: 15px;
