remove background colour for loading image

--- a/styles/sass/_mainPageStyle.scss
+++ b/styles/sass/_mainPageStyle.scss
@@ -76,7 +76,7 @@ form {
     position: absolute;
     top: 0;
     right: 0;
-    background-color: #c1f6ff;
+    // background-color: #c1f6ff;
 }
 
 @keyframes spin {
